Update javafx.md